[package]
name = "tfo-lore"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
console_error_panic_hook = "0.1.7"
dominator = "0.5.38"
futures-signals = "0.3.34"
gloo = "0.11.0"
itertools = "0.14.0"
js-sys = "0.3.77"
mutablex = "0.1.1"
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", default-features = false, features = [
    "Blob",
    "Cache",
    "CacheStorage",
    "Clipboard",
    "console",
    "DomRect",
    "Document",
    "DomRect",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlDetailsElement",
    "HtmlDivElement",
    "HtmlEmbedElement",
    "HtmlHeadingElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlObjectElement",
    "HtmlOptionElement",
    "HtmlParagraphElement",
    "HtmlProgressElement",
    "HtmlSelectElement",
    "HtmlSpanElement",
    "HtmlTableCellElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "Navigator",
    "NodeList",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "ScrollToOptions",
    "VisibilityState",
    "Window",
    "Worker",
    "WorkerOptions",
    "WorkerType",
] }
